New endpoint for clusters affected by a recommendation
